# jackin

./: .codebook.toml  .git-blame-ignore-revs  .gitignore  AGENT-COORDINATION.md  AGENTS.md  APPLE_CONTAINER_RESEARCH.md  AUTH_SOURCE_FOLDER_UNIFICATION_PLAN.md  BRANCHING.md  CAPSULE_RENDERING_FINDINGS.md  CHANGELOG.md  CLAUDE.md  CODEBASE_READABILITY_ROADMAP_VALIDATION.md  COMMITS.md  CONTEXT.md  CONTRIBUTING.md  COORDINATION.md  Cargo.toml  DEFECT_LEDGER.md  DEPRECATED.md  ENGINEERING.md  FINDINGS.md  HOST_AND_CONTAINER.md  ISSUES.md  Justfile  PLAN.md  PR-495-FIXES.md  PR-495-GOAL.md  PR-495-REVIEW.md  PR-495-TUI-SMOKE-FINDINGS.md  PR-576-review.md  PR-579-REVIEW.md  PR-MERGING.md  PRERELEASE.md  PROJECT_REVIEW.md  PROJECT_STRUCTURE.md  PULL_REQUESTS.md  README.md  REUSE.toml  REVIEW_STATUS.md  RULES.md  (+25 more)
crates/jackin-agent-status/: AGENTS.md  Cargo.toml  README.md
crates/jackin-agent-status/packs/: amp.toml  claude.toml  codex.toml  grok.toml  kimi.toml  opencode.toml
crates/jackin-agent-status/src/: arbitrate.rs  evidence.rs  gating.rs  lib.rs  policy.rs  process.rs  rules.rs  tests.rs
crates/jackin-brand/: AGENTS.md  Cargo.toml  README.md
crates/jackin-brand/src/: lib.rs
crates/jackin-build-meta/: AGENTS.md  Cargo.toml  README.md
crates/jackin-build-meta/src/: lib.rs  tests.rs
crates/jackin-capsule/: AGENTS.md  Cargo.toml  README.md  build.rs
crates/jackin-capsule/benches/: pane_body.rs  scrollback_snapshot.rs
crates/jackin-capsule/examples/: grid_patch_wire_efficiency.rs
crates/jackin-capsule/src/: action.rs  agent_status.rs  alloc_telemetry.rs  attach_context.rs  attach_protocol.rs  branch_context_bar.rs  chrome_widget.rs  client.rs  client_writer.rs  clipboard.rs  config.rs  container_context.rs  daemon.rs  debug_panic.rs  dialog.rs  dialog_widgets.rs  exec.rs  exit_assess.rs  firewall.rs  git_context.rs  input.rs  input_bindings.rs  layout.rs  lib.rs  logging.rs  main.rs  mcp_server.rs  mouse_protocol.rs  mux_mode.rs  output.rs  pane_widget.rs  perf_budgets.rs  pid1.rs  pr_context.rs  process_telemetry.rs  protocol.rs  pull_request.rs  render.rs  runtime_setup.rs  selection.rs  (+16 more)
crates/jackin-capsule/tests/: attach_protocol.rs  git_prepare_commit_msg.rs  input_parser.rs  osc_passthrough.rs  persistence_and_reattach.rs  render_allocation.rs  status_bar.rs  vt_round_trip.rs
crates/jackin-config/: AGENTS.md  Cargo.toml  README.md
crates/jackin-config/benches/: config_resolve.rs
crates/jackin-config/fuzz/: Cargo.toml
crates/jackin-config/src/: app_config.rs  app_config_mounts.rs  app_config_persist.rs  app_config_roles.rs  app_config_workspaces.rs  auth.rs  editor.rs  error.rs  lib.rs  migrations.rs  mounts.rs  paths.rs  persist.rs  planner.rs  resolve.rs  schema.rs  sensitive.rs  telemetry.rs  test_support.rs  validation.rs  versions.rs
crates/jackin-console/: AGENTS.md  Cargo.toml  README.md
crates/jackin-console-oppicker/: AGENTS.md  Cargo.toml  README.md
crates/jackin-console-oppicker/src/: adapters.rs  input.rs  lib.rs  load.rs  state.rs
crates/jackin-console/src/: focus.rs  github_mounts.rs  layout.rs  lib.rs  list_geometry.rs  list_row.rs  model.rs  mount_diff.rs  mount_display.rs  mount_info.rs  mount_info_cache.rs  op_breadcrumb.rs  op_cache.rs  op_reference.rs  provider_picker.rs  services.rs  sidebar_layout.rs  split.rs  terminal.rs  tui.rs  workspace.rs  workspace_summary.rs
crates/jackin-container/: Cargo.toml  build.rs
crates/jackin-container/src/: client.rs  daemon.rs  dialog.rs  input.rs  layout.rs  lib.rs  logging.rs  main.rs  pid1.rs  protocol.rs  render.rs  runtime_setup.rs  session.rs  socket.rs  statusbar.rs  terminal.rs
crates/jackin-container/tests/: attach_protocol.rs  input_parser.rs  osc_passthrough.rs  persistence_and_reattach.rs  status_bar.rs  vt_round_trip.rs
crates/jackin-core/: AGENTS.md  Cargo.toml  README.md
crates/jackin-core/src/: account_key.rs  agent.rs  ansi_text.rs  ansi_tokens.rs  auth.rs  build_log_sink.rs  claude_keychain.rs  clock.rs  constants.rs  container_id.rs  container_paths.rs  debug_log.rs  docker.rs  docker_security.rs  env_model.rs  env_value.rs  host_colors.rs  instance.rs  isolation.rs  isolation_record.rs  launch_progress.rs  lib.rs  manifest.rs  modal_outcome.rs  op_cache.rs  op_probe_error.rs  op_reference.rs  op_types.rs  operator_info.rs  operator_notice.rs  path_text.rs  paths.rs  prompt_result.rs  prune_output.rs  runner.rs  selector.rs  session_id.rs  standalone_dialog.rs  status.rs  tui_hover.rs  (+7 more)
crates/jackin-dev/: AGENTS.md  Cargo.toml  README.md
crates/jackin-dev/src/: main.rs  tests.rs
crates/jackin-diagnostics/: AGENTS.md  Cargo.toml  README.md  build.rs
crates/jackin-diagnostics/benches/: summarize_jsonl.rs
crates/jackin-diagnostics/src/: build_log.rs  conformance.rs  debug_log.rs  debug_log_adapter.rs  lib.rs  logging.rs  metrics.rs  observability.rs  observability_events.rs  observability_test_support.rs  operation.rs  operator_notice.rs  redact.rs  registry.rs  run.rs  screen.rs  (+5 more)
crates/jackin-docker/: AGENTS.md  Cargo.toml  README.md
crates/jackin-env/: AGENTS.md  Cargo.toml  README.md
crates/jackin-host/: AGENTS.md  Cargo.toml  README.md
crates/jackin-image/: AGENTS.md  Cargo.toml  README.md  build.rs
crates/jackin-instance/: AGENTS.md  Cargo.toml  README.md
crates/jackin-isolation/: AGENTS.md  Cargo.toml  README.md
crates/jackin-launch/: Cargo.toml  README.md  build.rs
crates/jackin-launch-tui/: AGENTS.md  Cargo.toml  README.md
crates/jackin-lints/: AGENTS.md  Cargo.toml  README.md  rust-toolchain
crates/jackin-manifest/: AGENTS.md  Cargo.toml  README.md
crates/jackin-oppicker/: AGENTS.md  Cargo.toml  README.md
crates/jackin-otlp-testbed/: AGENTS.md  Cargo.toml  README.md
crates/jackin-pr-trailers/: AGENTS.md  Cargo.toml  README.md
crates/jackin-process/: AGENTS.md  Cargo.toml  README.md
crates/jackin-protocol/: AGENTS.md  Cargo.toml  README.md
crates/jackin-runtime/: AGENTS.md  Cargo.toml  README.md
crates/jackin-telemetry/: AGENTS.md  Cargo.toml  README.md
crates/jackin-term/: AGENTS.md  Cargo.toml  README.md
(+4365 files in other folders)
