[workspace]
members = [
    "crates/jackin",
    "crates/jackin-build-meta",
    "crates/jackin-capsule",
    "crates/jackin-config",
    "crates/jackin-console",
    "crates/jackin-core",
    "crates/jackin-diagnostics",
    "crates/jackin-docker",
    "crates/jackin-env",
    "crates/jackin-image",
    "crates/jackin-manifest",
    "crates/jackin-protocol",
    "crates/jackin-launch",
    "crates/jackin-runtime",
    "crates/jackin-term",
    "crates/jackin-tui",
    "crates/jackin-tui-lookbook",
]
resolver = "2"

[workspace.package]
version = "0.6.0-dev"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/jackin-project/jackin"

[profile.dev]
# Line tables only: ~30-50% smaller artifacts, faster link, stack traces still work.
debug = 1

[profile.release]
strip = "symbols"

# Symbol-rich capsule build for triage. Select with:
#   cargo run --bin build-jackin-capsule -- --profile debug
# Produces a ~10x larger binary; backtraces resolve to function + file:line.
# Use RUST_BACKTRACE=full when launching to get the richest trace.
[profile.capsule-debug]
inherits = "release"
strip = false
debug = "line-tables-only"
