[workspace]
members = [
    "crates/jackin",
    "crates/jackin-build-meta",
    "crates/jackin-capsule",
    "crates/jackin-config",
    "crates/jackin-console",
    "crates/jackin-core",
    "crates/jackin-dev",
    "crates/jackin-diagnostics",
    "crates/jackin-docker",
    "crates/jackin-env",
    "crates/jackin-host",
    "crates/jackin-image",
    "crates/jackin-manifest",
    "crates/jackin-protocol",
    "crates/jackin-launch-tui",
    "crates/jackin-runtime",
    "crates/jackin-term",
    "crates/jackin-tui",
    "crates/jackin-tui-lookbook",
    "crates/jackin-xtask",
    "crates/jackin-pr-trailers",
    "crates/jackin-usage",
    "crates/jackin-isolation",
    "crates/jackin-instance",
]
resolver = "3"

[workspace.package]
version = "0.6.0-dev"
edition = "2024"
rust-version = "1.94"
license = "Apache-2.0"
repository = "https://github.com/jackin-project/jackin"

[workspace.lints.rust]
rust_2024_compatibility = { level = "deny", priority = -1 }
future_incompatible = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
unused = { level = "deny", priority = -1 }
unused_imports = "deny"
unused_variables = "deny"
unused_must_use = "deny"
dead_code = "deny"
unreachable_pub = "deny"
unsafe_op_in_unsafe_fn = "deny"
unsafe_attr_outside_unsafe = "deny"
missing_unsafe_on_extern = "deny"
never_type_fallback_flowing_into_unsafe = "deny"
unsafe_code = "forbid"
unused_qualifications = "deny"
unused_lifetimes = "deny"
redundant_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unnameable_types = "deny"
unit_bindings = "deny"
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
single_use_lifetimes = "deny"
let_underscore_drop = "deny"
missing_debug_implementations = "warn"
async_fn_in_trait = "allow"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
dbg_macro = "deny"
mod_module_files = "deny"
todo = "deny"
unimplemented = "deny"
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
mem_forget = "deny"
disallowed_methods = "deny"
print_stdout = "deny"
print_stderr = "deny"
exit = "warn"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
manual_assert = "deny"
manual_let_else = "warn"
match_bool = "warn"
needless_pass_by_value = "allow"
trivially_copy_pass_by_ref = "warn"
large_enum_variant = "warn"
large_futures = "allow"
result_large_err = "warn"
clone_on_ref_ptr = "warn"
rc_buffer = "warn"
str_to_string = "warn"
return_self_not_must_use = "warn"
redundant_feature_names = "allow"
struct_excessive_bools = "warn"
fn_params_excessive_bools = "warn"
too_many_lines = "warn"
cognitive_complexity = "warn"
excessive_nesting = "warn"
implicit_hasher = "allow"
similar_names = "allow"
assigning_clones = "allow"
match_same_arms = "allow"
drop_non_drop = "allow"
format_push_string = "allow"
no_effect_underscore_binding = "allow"
items_after_statements = "allow"
unnecessary_wraps = "allow"
unused_self = "allow"
option_option = "allow"
verbose_bit_mask = "allow"
unreadable_literal = "allow"
unnecessary_debug_formatting = "allow"
unused_async = "allow"
float_cmp = "allow"
struct_field_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
future_not_send = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

[profile.dev]
# Line tables only: ~30-50% smaller artifacts, faster link, stack traces still work.
debug = 1

[profile.release]
lto = "thin"
strip = "symbols"

# Symbol-rich capsule build for triage. Select with:
#   cargo run --bin build-jackin-capsule -- --profile debug
# Produces a ~10x larger binary; backtraces resolve to function + file:line.
# Use RUST_BACKTRACE=full when launching to get the richest trace.
[profile.capsule-debug]
inherits = "release"
strip = false
debug = "line-tables-only"
