[package]
name = "jackin-agent-status"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
authors = ["Alexey Zhokhov <alexey@zhokhov.com>"]
description = "Pure agent runtime status detection and arbitration for jackin."
homepage = "https://jackin.tailrocks.com/"
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = "1.0"
jackin-core = { version = "0.6.0-dev", path = "../jackin-core" }
jackin-protocol = { version = "0.6.0-dev", path = "../jackin-protocol" }
regex = "1"
semver = "1"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.18"

[dev-dependencies]
tempfile = "=3.27.0"

[lints]
workspace = true
