# SPDX-FileCopyrightText: 2026 Alexey Zhokhov
# SPDX-License-Identifier: Apache-2.0

[package]
name = "jackin-build-meta"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
authors = ["Alexey Zhokhov <alexey@zhokhov.com>"]
description = "Build-script helpers shared by jackin crates."
license.workspace = true
readme = "README.md"
publish = false

repository.workspace = true
[lib]
path = "src/lib.rs"

[lints]
workspace = true
