[package]
name = "jackin-capsule"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
authors = ["Alexey Zhokhov <alexey@zhokhov.com>"]
description = "In-container PID 1 control plane for Capsule-managed role containers."
homepage = "https://jackin.tailrocks.com/"
repository.workspace = true
license.workspace = true
readme = "README.md"
publish = false

[lib]
name = "jackin_capsule"
path = "src/lib.rs"

[[bin]]
name = "jackin-capsule"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
jackin-protocol = { path = "../jackin-protocol" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
toml = "1.1"
tokio = { version = "1", features = ["rt", "io-util", "io-std", "sync", "macros", "time", "net", "signal"] }
crossterm = "0.29"
portable-pty = "0.9"
nix = { version = "0.31", features = ["term", "signal", "process", "inotify"] }
# jackin-term: the owned terminal model. `DamageGrid` is the sole VT parser /
# screen / scrollback / passthrough model.
jackin-term = { path = "../jackin-term" }
url = "2"
unicode-width = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
jackin-tui = { path = "../jackin-tui" }
ratatui = "0.30"
# tui-term was evaluated for pane-body rendering (see ADR-004) but did not fit
# the capsule's owned-grid model. The custom cell widget approach is used instead.

[build-dependencies]
jackin-build-meta = { path = "../jackin-build-meta" }

[[bench]]
name = "pane_body"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "=3.27.0"
insta = { version = "1", features = ["filters"] }

[lints]
workspace = true
