[package]
name = "jackin-capsule"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
authors = ["Alexey Zhokhov <alexey@zhokhov.com>"]
description = "In-container PID 1 control plane for Capsule-managed role containers."
homepage = "https://jackin.tailrocks.com/"
repository.workspace = true
license.workspace = true
readme = "README.md"
publish = false

[features]
default = []
# Enables the DHAT allocator in allocation regression tests and opt-in live
# capsule allocation telemetry for the focused-pane render handoff.
dhat-heap = ["dep:dhat"]

[lib]
name = "jackin_capsule"
path = "src/lib.rs"

[[bin]]
name = "jackin-capsule"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
jackin-core = { version = "0.6.0-dev", path = "../jackin-core" }
# OTLP export for the in-container session, runtime-gated on the endpoint the
# host injects. Pulls the opentelemetry stack into the capsule image.
jackin-diagnostics = { version = "0.6.0-dev", path = "../jackin-diagnostics", features = ["otlp"] }
jackin-protocol = { version = "0.6.0-dev", path = "../jackin-protocol" }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
tokio = { version = "1", features = ["rt", "io-util", "io-std", "sync", "macros", "time", "net", "signal"] }
crossterm = "0.29"
portable-pty = "0.9"
nix = { version = "0.31", features = ["term", "signal", "process", "inotify"] }
# jackin-term: the owned terminal model. `DamageGrid` is the sole VT parser /
# screen / scrollback / passthrough model.
jackin-term = { version = "0.6.0-dev", path = "../jackin-term" }
url = "2"
unicode-width = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
turso = { version = "0.7.0-pre.7", default-features = false }
sha2 = "0.11"
jackin-tui = { version = "0.6.0-dev", path = "../jackin-tui" }
ratatui = "0.30"
hex = "0.4"
dhat = { version = "0.3.3", optional = true }
# tui-term was evaluated for pane-body rendering (see ADR-004) but did not fit
# the capsule's owned-grid model. The custom cell widget approach is used instead.

[build-dependencies]
jackin-build-meta = { version = "0.6.0-dev", path = "../jackin-build-meta" }

[[bench]]
name = "pane_body"
harness = false

[dev-dependencies]
criterion = { version = "=0.8.2", features = ["html_reports"] }
tempfile = "=3.27.0"
insta = { version = "=1.48.0", features = ["filters"] }
tokio = { version = "=1.52.3", features = ["test-util"] }

[lints]
workspace = true
