[package]
name = "jackin-config"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
authors = ["Alexey Zhokhov <alexey@zhokhov.com>"]
description = "Configuration schema and workspace resolution for jackin. Merges config/ and workspace/ modules to dissolve the config↔workspace mutual cycle."
license.workspace = true
readme = "README.md"
publish = false

repository.workspace = true
[lib]
name = "jackin_config"
path = "src/lib.rs"

[dependencies]
jackin-core = { version = "0.6.0-dev", path = "../jackin-core" }
jackin-diagnostics = { version = "0.6.0-dev", path = "../jackin-diagnostics" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
toml_edit = "0.25"
toml = "1.1"
directories = "6.0"

[dev-dependencies]
tempfile = "=3.27.0"

[features]
test-support = []

[lints]
workspace = true
