[package]
name = "jackin-config"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
authors = ["Alexey Zhokhov <alexey@zhokhov.com>"]
description = "Configuration schema and workspace resolution for jackin. Merges config/ and workspace/ modules to dissolve the config↔workspace mutual cycle."
license.workspace = true
readme = "README.md"
publish = false

repository.workspace = true
[lib]
name = "jackin_config"
path = "src/lib.rs"

[dependencies]
jackin-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
toml_edit = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
test-support = []

[lints]
workspace = true
