[package]
name = "jackin-console"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
publish = false

license.workspace = true
repository.workspace = true
[dependencies]
anyhow = "1.0"
crossterm = "0.29"
directories = "6.0"
jackin-config = { version = "0.6.0-dev", path = "../jackin-config" }
jackin-core = { version = "0.6.0-dev", path = "../jackin-core" }
jackin-diagnostics = { version = "0.6.0-dev", path = "../jackin-diagnostics" }
jackin-env = { version = "0.6.0-dev", path = "../jackin-env" }
jackin-protocol = { version = "0.6.0-dev", path = "../jackin-protocol" }
jackin-tui = { version = "0.6.0-dev", path = "../jackin-tui" }
nix = { version = "0.31", features = ["term"] }
open = "5.3.4"
ratatui = "0.30"
tui-widget-list = "0.15"

[dev-dependencies]
insta = { version = "=1.48.0", features = ["filters"] }
tempfile = "=3.27.0"
toml = "=1.1.2"

[features]
# Enables `jackin_config::test_support::*` from in-crate tests. Tests must be
# run with `cargo nextest run -p jackin-console --features test-support` to compile.
test-support = ["jackin-config/test-support"]

[lints]
workspace = true
