[package]
name = "jackin-console"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
publish = false

license.workspace = true
repository.workspace = true
[dependencies]
anyhow = { workspace = true }
crossterm = { workspace = true }
directories = { workspace = true }
jackin-config = { workspace = true }
jackin-core = { workspace = true }
jackin-diagnostics = { workspace = true }
jackin-env = { workspace = true }
jackin-protocol = { workspace = true }
jackin-tui = { workspace = true }
nix = { workspace = true, features = ["term"] }
open = "5.3.4"
ratatui = { workspace = true }
tui-widget-list = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["filters"] }
tempfile = { workspace = true }
toml = { workspace = true }

[features]
# Enables `jackin_config::test_support::*` from in-crate tests. Tests must be
# run with `cargo nextest run -p jackin-console --features test-support` to compile.
test-support = ["jackin-config/test-support"]

[lints]
workspace = true
