[package]
name = "jackin-container"
version = "0.6.0-dev"
edition = "2024"
rust-version = "1.94"
authors = ["Alexey Zhokhov <alexey@zhokhov.com>"]
description = "In-container PID 1 multiplexer server for jackin-managed containers."
homepage = "https://jackin.tailrocks.com/"
repository = "https://github.com/jackin-project/jackin"
license = "Apache-2.0"
publish = false

[lib]
name = "jackin_container"
path = "src/lib.rs"

[[bin]]
name = "jackin-container"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "io-util", "io-std", "sync", "macros", "time", "net", "signal"] }
crossterm = "0.29"
portable-pty = "0.9"
nix = { version = "0.31", features = ["term", "signal", "process"] }
vt100 = "0.16"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
dbg_macro = "deny"
todo = "warn"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
