[package]
name = "jackin-core"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
authors = ["Alexey Zhokhov <alexey@zhokhov.com>"]
description = "Universal vocabulary types shared across all jackin crates: Agent, MountIsolation, AuthForwardMode, selectors, and constants."
license.workspace = true
readme = "README.md"
publish = false

repository.workspace = true
[lib]
name = "jackin_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
directories = "6.0"
jackin-protocol = { path = "../jackin-protocol" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.20"

[lints]
workspace = true
