[package]
name = "jackin-core"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
authors = ["Alexey Zhokhov <alexey@zhokhov.com>"]
description = "Universal vocabulary types shared across all jackin crates: Agent, MountIsolation, AuthForwardMode, selectors, and constants."
license.workspace = true
readme = "README.md"
publish = false

repository.workspace = true
[lib]
name = "jackin_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
directories = "6.0"
hex = "0.4"
owo-colors = { version = "4", features = ["supports-colors"] }
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.11"
thiserror = "2.0"

[dev-dependencies]
serde_json = "=1.0.150"
tempfile = "=3.27.0"

[lints]
workspace = true
