[package]
name = "jackin-dev"
version = "0.1.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Developer tooling for local jackin pull request verification."
publish = false

[[bin]]
name = "jackin-dev"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
