[package]
name = "jackin-dev"
version = "0.1.19"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Developer tooling for local jackin pull request verification."
publish = false

[[bin]]
name = "jackin-dev"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
